--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link active" aria-current="page" href="/iCoder-Bootstrap/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iCoder-Bootstrap//about.html">About</a>
+              <a class="nav-link" href="/iCoder-Bootstrap/about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -58,7 +58,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/iCoder-Bootstrap//contact.html">Contact Us</a>
+              <a class="nav-link" href="/iCoder-Bootstrap/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex">
